--- a/app/scss/_header.scss
+++ b/app/scss/_header.scss
@@ -1,6 +1,34 @@
 .header {
+  // Hamburger Open Styles
+
+  &.open {
+    .header__menu {
+      > span:first-child {
+        transform: rotate(45deg);
+      }
+
+      > span:nth-child(2) {
+        opacity: 0;
+      }
+
+      > span:last-child {
+        transform: rotate(-45deg);
+      }
+    }
+  }
+
+  .overlay {
+    display: none;
+    position: fixed;
+    top: 3.75rem;
+    right: 0px;
+    bottom: 0px;
+    left: 0px;
+    background-image: linear-gradient($darkBlue, transparent);
+  }
+
   nav {
-    padding: 24px;
+    padding: 18px;
   }
 
   // &__logo {
@@ -15,7 +43,7 @@
       height: 2px;
       background-color: $darkBlue;
       transition: all 0.3s ease-in-out;
-      transform-origin: center left;
+      transform-origin: 6px 1px;
 
       &:not(last-child) {
         margin-bottom: 3px;
