--- a/app/scss/style.css
+++ b/app/scss/style.css
@@ -3,6 +3,10 @@
     display: none;
     opacity: 0;
   }
+  1% {
+    display: block;
+    opacity: 0;
+  }
   to {
     display: block;
     opacity: 1;
@@ -12,6 +16,10 @@
 @keyframes fade-in {
   from {
     display: none;
+    opacity: 0;
+  }
+  1% {
+    display: block;
     opacity: 0;
   }
   to {
@@ -101,6 +109,12 @@ button,
   .hide-for-desktop {
     display: none;
   }
+}
+
+.header.open .overlay {
+  display: block;
+  -webkit-animation: fade-in 300ms ease-in-out forwards;
+          animation: fade-in 300ms ease-in-out forwards;
 }
 
 .header.open .header__menu > span:first-child {
