--- a/app/scss/_header.scss
+++ b/app/scss/_header.scss
@@ -2,6 +2,11 @@
   // Hamburger Open Styles
 
   &.open {
+    .overlay {
+      display: block;
+      animation: fade-in 300ms ease-in-out forwards;
+    }
+
     .header__menu {
       > span:first-child {
         transform: rotate(45deg);
