--- a/app/scss/_header.scss
+++ b/app/scss/_header.scss
@@ -2,11 +2,6 @@
   // Hamburger Open Styles
 
   &.open {
-    .overlay {
-      display: block;
-      animation: fade-in 300ms ease-in-out forwards;
-    }
-
     .header__menu {
       > span:first-child {
         transform: rotate(45deg);
@@ -23,7 +18,7 @@
   }
 
   .overlay {
-    display: none;
+    opacity: 0;
     position: fixed;
     top: 3.75rem;
     right: 0px;
