--- a/app/scss/_animations.scss
+++ b/app/scss/_animations.scss
@@ -1,16 +1,40 @@
 @keyframes fade-in {
   from {
-    display: none;
+    visibility: hidden;
     opacity: 0;
   }
 
   1% {
-    display: block;
+    visibility: visible;
     opacity: 0;
   }
 
   to {
-    display: block;
     opacity: 1;
   }
+}
+
+.fade-in {
+  animation: fade-in 300ms ease-in-out forwards;
+}
+
+@keyframes fade-out {
+  from {
+    visibility: visible;
+    opacity: 1;
+  }
+
+  99% {
+    visibility: visible;
+    opacity: 0;
+  }
+
+  to {
+    visibility: hidden;
+    opacity: 0;
+  }
+}
+
+.fade-out {
+  animation: fade-out 300ms ease-in-out forwards;
 }
