--- a/app/scss/_globals.scss
+++ b/app/scss/_globals.scss
@@ -30,6 +30,12 @@ a:hover {
   text-decoration: none;
 }
 
+//Spacing
+.container {
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
+}
+
 //Flexbox Style
 
 .flex {
