--- a/app/scss/_header.scss
+++ b/app/scss/_header.scss
@@ -2,7 +2,7 @@
   // Hamburger Open Styles
 
   &.open {
-    .header__menu {
+    .header__toggle {
       > span:first-child {
         transform: rotate(45deg);
       }
@@ -28,7 +28,8 @@
   }
 
   nav {
-    padding: 18px;
+    padding-top: 1.0625rem;
+    padding-bottom: 1.0625rem;
   }
 
   // &__logo {
@@ -36,7 +37,7 @@
   //   }
   // }
 
-  &__menu {
+  &__toggle {
     > span {
       display: block;
       width: 26px;
@@ -48,6 +49,23 @@
       &:not(last-child) {
         margin-bottom: 3px;
       }
+    }
+  }
+
+  &__menu {
+    position: absolute;
+    width: calc(100% - 3rem);
+    left: 50%;
+    transform: translateX(-50%);
+    background: $white;
+    padding: 1.625rem;
+    border-radius: 3px;
+
+    a {
+      display: block;
+      padding: 0.625rem;
+      color: $darkBlue;
+      text-align: center;
     }
   }
 
