--- a/app/scss/_header.scss
+++ b/app/scss/_header.scss
@@ -32,10 +32,17 @@
     padding-bottom: 1.0625rem;
   }
 
-  // &__logo {
-  //   img {
-  //   }
-  // }
+  &__logo {
+    width: 8.8125rem;
+    height: 1.375rem;
+  }
+
+  &__img {
+    display: block;
+    margin-top: auto;
+    margin-bottom: auto;
+    height: 50%;
+  }
 
   &__toggle {
     > span {
@@ -58,8 +65,9 @@
     left: 50%;
     transform: translateX(-50%);
     background: $white;
+    margin-top: 1.5rem;
     padding: 1.625rem;
-    border-radius: 3px;
+    border-radius: 5px;
 
     a {
       display: block;
