--- a/app/scss/_globals.scss
+++ b/app/scss/_globals.scss
@@ -1,22 +1,23 @@
+html {
+  font-size: 100%;
+  box-sizing: border-box;
+}
+
 *,
 *::before,
 *::after {
   box-sizing: inherit;
 }
 
-html {
-  font-size: 100%;
-  box-sizing: border-box;
-}
-
 body {
   margin: 0;
   padding: 0;
   font-family: "Public Sans", sans-serif;
-  font-size: $font-med;
+  font-size: $font-med; // 18px;
   font-weight: 300;
   color: $grayishBlue;
   line-height: 1.3;
+
 }
 
 .front-page {
