--- a/app/scss/style.css
+++ b/app/scss/style.css
@@ -11,7 +11,6 @@
     opacity: 1;
   }
 }
-
 @keyframes fade-in {
   from {
     visibility: hidden;
@@ -25,7 +24,6 @@
     opacity: 1;
   }
 }
-
 .fade-in {
   -webkit-animation: fade-in 300ms ease-in-out forwards;
           animation: fade-in 300ms ease-in-out forwards;
@@ -60,23 +58,20 @@
     opacity: 0;
   }
 }
-
 .fade-out {
   -webkit-animation: fade-out 300ms ease-in-out forwards;
           animation: fade-out 300ms ease-in-out forwards;
 }
 
+html {
+  font-size: 100%;
+  box-sizing: border-box;
+}
+
 *,
 *::before,
 *::after {
-  -webkit-box-sizing: inherit;
-          box-sizing: inherit;
-}
-
-html {
-  font-size: 100%;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: inherit;
 }
 
 body {
@@ -85,7 +80,7 @@ body {
   font-family: "Public Sans", sans-serif;
   font-size: 1.125rem;
   font-weight: 300;
-  color: #9698a6;
+  color: hsl(233deg, 8%, 62%);
   line-height: 1.3;
 }
 
@@ -106,35 +101,23 @@ a:hover {
 }
 
 .flex {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
 }
-
 .flex-jc-sb {
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  justify-content: space-between;
 }
-
 .flex-jc-c {
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  justify-content: center;
 }
-
 .flex-ai-c {
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  align-items: center;
 }
 
 button,
 .button {
   padding: 1rem 1.875rem;
-  background: -webkit-gradient(linear, left top, right top, from(#31d35c), to(#2bb7da));
-  background: linear-gradient(to right, #31d35c, #2bb7da);
-  color: white;
+  background: linear-gradient(to right, hsl(136deg, 65%, 51%), hsl(192deg, 70%, 51%));
+  color: hsl(0deg, 0%, 100%);
   font-size: 1rem;
   font-weight: 400;
   border: 0px;
@@ -155,19 +138,14 @@ button,
 }
 
 .header.open .header__toggle > span:first-child {
-  -webkit-transform: rotate(45deg);
-          transform: rotate(45deg);
+  transform: rotate(45deg);
 }
-
 .header.open .header__toggle > span:nth-child(2) {
   opacity: 0;
 }
-
 .header.open .header__toggle > span:last-child {
-  -webkit-transform: rotate(-45deg);
-          transform: rotate(-45deg);
+  transform: rotate(-45deg);
 }
-
 .header .overlay {
   opacity: 0;
   position: fixed;
@@ -175,54 +153,53 @@ button,
   right: 0px;
   bottom: 0px;
   left: 0px;
-  background-image: -webkit-gradient(linear, left top, left bottom, from(#2d314d), to(transparent));
-  background-image: linear-gradient(#2d314d, transparent);
+  background-image: linear-gradient(hsl(233deg, 26%, 24%), transparent);
 }
-
 .header nav {
   padding-top: 1.0625rem;
   padding-bottom: 1.0625rem;
 }
-
+.header__logo {
+  width: 8.8125rem;
+  height: 1.375rem;
+}
+.header__img {
+  display: block;
+  margin-top: auto;
+  margin-bottom: auto;
+  height: 50%;
+}
 .header__toggle > span {
   display: block;
   width: 26px;
   height: 2px;
-  background-color: #2d314d;
-  -webkit-transition: all 0.3s ease-in-out;
+  background-color: hsl(233deg, 26%, 24%);
   transition: all 0.3s ease-in-out;
-  -webkit-transform-origin: 6px 1px;
-          transform-origin: 6px 1px;
+  transform-origin: 6px 1px;
 }
-
 .header__toggle > span:not(last-child) {
   margin-bottom: 3px;
 }
-
 .header__menu {
   position: absolute;
   width: calc(100% - 3rem);
   left: 50%;
-  -webkit-transform: translateX(-50%);
-          transform: translateX(-50%);
-  background: white;
+  transform: translateX(-50%);
+  background: hsl(0deg, 0%, 100%);
+  margin-top: 1.5rem;
   padding: 1.625rem;
-  border-radius: 3px;
+  border-radius: 5px;
 }
-
 .header__menu a {
   display: block;
   padding: 0.625rem;
-  color: #2d314d;
+  color: hsl(233deg, 26%, 24%);
   text-align: center;
 }
-
 .header__links a {
   font-size: 0.875rem;
-  color: #2d314d;
+  color: hsl(233deg, 26%, 24%);
 }
-
 .header__links a:not(:last-child) {
   margin-right: 32px;
-}
-/*# sourceMappingURL=style.css.map */
+}/*# sourceMappingURL=style.css.map */
