--- a/app/scss/style.css
+++ b/app/scss/style.css
@@ -123,6 +123,12 @@ button,
   border: 0px;
   border-radius: 50px;
   cursor: pointer;
+  opacity: 1;
+  transition: opacity 300ms ease-in-out;
+}
+button:hover,
+.button:hover {
+  opacity: 0.75;
 }
 
 @media (max-width: 63.9375em) {
@@ -137,6 +143,12 @@ button,
   }
 }
 
+.header nav {
+  padding-top: 1.0625rem;
+  padding-bottom: 1.0625rem;
+  padding-right: 1.5rem;
+  padding-left: 1.5rem;
+}
 .header.open .header__toggle > span:first-child {
   transform: rotate(45deg);
 }
@@ -149,17 +161,13 @@ button,
 .header .overlay {
   opacity: 0;
   position: fixed;
-  top: 3.75rem;
+  top: 3.5rem;
   right: 0px;
   bottom: 0px;
   left: 0px;
   background-image: linear-gradient(hsl(233deg, 26%, 24%), transparent);
 }
-.header nav {
-  padding-top: 1.0625rem;
-  padding-bottom: 1.0625rem;
-}
-.header__logo {
+.header__logo img {
   width: 8.8125rem;
   height: 1.375rem;
 }
@@ -195,11 +203,35 @@ button,
   padding: 0.625rem;
   color: hsl(233deg, 26%, 24%);
   text-align: center;
+  transition: color 0.3s ease-in-out;
+}
+.header__menu a:hover {
+  color: hsl(233deg, 8%, 62%);
 }
 .header__links a {
+  position: relative;
   font-size: 0.875rem;
-  color: hsl(233deg, 26%, 24%);
+  color: hsl(233deg, 8%, 62%);
+  transition: color 0.3s ease-in-out;
 }
 .header__links a:not(:last-child) {
   margin-right: 32px;
+}
+.header__links a::before {
+  content: "";
+  display: block;
+  position: absolute;
+  height: 4px;
+  background: linear-gradient(to right, hsl(136deg, 65%, 51%), hsl(192deg, 70%, 51%));
+  left: 0;
+  right: 0;
+  bottom: -30px;
+  opacity: 0;
+  transition: opacity 0.3s ease-in-out;
+}
+.header__links a:hover {
+  color: hsl(233deg, 26%, 24%);
+}
+.header__links a:hover::before {
+  opacity: 1;
 }/*# sourceMappingURL=style.css.map */
